--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
+    "node-fetch": "2.0",
     "validator": "^13.7.0"
   }
 }
